--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "fast-csv": "^2.4.1",
     "fs": "0.0.1-security",
     "mongojs": "^2.6.0",
     "mongoose": "^5.4.2"
