--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fast-csv": "^2.4.1",
     "fs": "0.0.1-security",
     "mongojs": "^2.6.0",
-    "mongoose": "^5.4.2"
+    "mongoose": "^5.4.2",
+    "node-xlsx": "^0.12.1"
   }
 }
