fix API read sanam.csv (2)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "fs": "0.0.1-security",
     "mongojs": "^2.6.0",
     "mongoose": "^5.4.2",
-    "node-xlsx": "^0.12.1"
+    "node-xlsx": "^0.12.1",
+    "request": "^2.88.0",
+    "xlsx": "^0.14.1"
   }
 }
